2018-05-08  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* src/ftgrid.c (main): Fail to open font earlier.

2018-05-01  Werner Lemberg  <wl@gnu.org>

	* Version 2.9.1 released.
	=========================


	Tag sources with `VER-2-9-1.

	* README: Updated.
	* src/*.1: Updated.
	* src/ftinspect/ftinspect.pro: Updated.

2018-04-26  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* src/ftstring.c (main): Update initializations.

2018-04-25  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* src/ftstring.c (main): Use size metrics instead of resolution.
	* src/ftview.c (Render_Fancy, Render_Stroke): Ditto.

2018-04-25  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* src/ftgrid.c (gitd_status_init): Set default resolution here...
	(parse_cmdline): ... instead of here.

2018-04-23  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* src/ftcommon.c (FTDemo_Draw_Header): Hide redundant point size.

2018-04-22  Werner Lemberg  <wl@gnu.org>

	* src/ftview.c (Render_Stroke): Avoid double-free in case of error.

2018-04-22  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* src/ftview.c (Render_Waterfall): Reformulate the step.

2018-04-20  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftview] Display more dramatic waterfalls.

	* src/ftview.c (Render_Waterfall): Start from a small size and
	increment so that the requested size is in the middle.

2018-04-19  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* graph/grobjs.c (grFindColor): Missing case added.

2018-04-19  Alexei Podtelezhnikov  <apodtele@gmail.com>

	Recycle some code.

	* graph/grfill.c (grFillRect): Call `memcpy' to speed it up.
	* src/ftcommon.c (FTDemo_Display_Clear): Call `grFillRect'.

2018-04-18  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftdump] Special case for copyright sign.

	* src/output.c (put_ascii_string{,_size}): Implement it.

2018-04-18  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* Makefile: Use `info' function of make 3.81.

2018-04-18  Alexei Podtelezhnikov  <apodtele@gmail.com>
